Use MAKE_Q_OPENAL_LIB also inside the cmake file, not just in the export

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,7 +80,7 @@ set(QTOPENAL_LIBS
     CACHE PATHS "Libraries required for QtOpenAL"
 )
 
-set_target_properties(QtOpenAL PROPERTIES VERSION ${QTOPENAL_VERSION_STRING} SOVERSION ${QTOPENAL_VERSION_STRING} DEFINE_SYMBOL MAKE_QTOPENAL_LIB)
+set_target_properties(QtOpenAL PROPERTIES VERSION ${QTOPENAL_VERSION_STRING} SOVERSION ${QTOPENAL_VERSION_STRING} DEFINE_SYMBOL MAKE_Q_OPENAL_LIB)
 
 install(TARGETS QtOpenAL RUNTIME DESTINATION bin LIBRARY DESTINATION ${LIB_INSTALL_DIR} ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
 
