Add a basic QALListener class with few mutators and one accessor method
Change-Id: Ib766196fdb53040ca697aab4a6a56311d04459c8
Reviewed-by: Laszlo Papp <lpapp@kde.org>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,6 +49,7 @@ set(QtOpenAL_SRCS
     qalbufferformat.cpp
     qalbufferqueue.cpp
     qalcontext.cpp
+    qallistener.cpp
     qalsource.cpp
 
     decoders/qalflacaudiodecoder.cpp
@@ -62,6 +63,7 @@ set(QtOpenAL_HEADERS
     qalbufferformat.h
     qalbufferqueue.h
     qalcontext.h
+    qallistener.h
     qalsource.h
 	${CMAKE_CURRENT_BINARY_DIR}/qtopenal_global.h
 
